macro/src/snapshots/diplomat__tests__mod_with_rust_result.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                {\n                                    pub fn bar(& self) -> Result < (), () >\n                                    { unimplemented! () }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    struct Foo {}
    impl Foo {
        pub fn bar(&self) -> Result<(), ()> {
            unimplemented!()
        }
    }
    #[no_mangle]
    extern "C" fn Foo_bar(this: &Foo) -> Box<diplomat_runtime::DiplomatResult<(), ()>> {
        Box::new(this.bar().into())
    }
    #[no_mangle]
    extern "C" fn Foo_destroy(this: Box<Foo>) {}
}

