macro/src/snapshots/diplomat__tests__mod_with_writeable_result.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                {\n                                    pub fn to_string(& self, to : & mut DiplomatWriteable) ->\n                                    Result < (), () > { unimplemented! () }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    struct Foo {}
    impl Foo {
        pub fn to_string(&self, to: &mut DiplomatWriteable) -> Result<(), ()> {
            unimplemented!()
        }
    }
    #[no_mangle]
    extern "C" fn Foo_to_string(
        this: &Foo,
        to: &mut diplomat_runtime::DiplomatWriteable,
    ) -> Box<diplomat_runtime::DiplomatResult<(), ()>> {
        let ret = Box::new(this.to_string(to).into());
        to.flush();
        ret
    }
    #[no_mangle]
    extern "C" fn Foo_destroy(this: Box<Foo>) {}
    #[no_mangle]
    extern "C" fn result_unit_unit_destroy(this: Box<::diplomat_runtime::DiplomatResult<(), ()>>) {}
}

